--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,20 @@
 	<description>GymTrack API</description>
 	<properties>
 		<java.version>17</java.version>
+		<flyway.user>admin</flyway.user>
+		<flyway.password>admin</flyway.password>
+		<flyway.baselineOnMigrate>true</flyway.baselineOnMigrate>
+		<flyway.url>jdbc:postgresql://localhost:5432/postgres</flyway.url>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -39,6 +48,15 @@
 			<groupId>com.google.firebase</groupId>
 			<artifactId>firebase-admin</artifactId>
 			<version>8.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
 		</dependency>
 	</dependencies>
 
@@ -64,6 +82,11 @@
                     <target>16</target>
                 </configuration>
             </plugin>
+			<plugin>
+				<groupId>org.flywaydb</groupId>
+				<artifactId>flyway-maven-plugin</artifactId>
+				<version>8.3.0</version>
+			</plugin>
         </plugins>
 	</build>
 
