--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+
+### CONFIG ###
+application-prod.yml
+
 ### STS ###
 .apt_generated
 .classpath
