--- a/src/main/resources/application-prod.sample.yml
+++ b/src/main/resources/application-prod.sample.yml
@@ -17,6 +17,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+        physical_naming_strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
     hibernate:
       ddl-auto: none
   flyway:
