mapping more tables, adding logic & endpoint for adding exercise to routine, skeleton for access control layer, updating postman collection, other minor fixes

--- a/src/main/resources/application-prod.sample.yml
+++ b/src/main/resources/application-prod.sample.yml
@@ -12,6 +12,10 @@ spring:
     type: redis
     redis:
       time-to-live: 60m
+  data:
+    redis:
+      repositories:
+        enabled: false
   redis:
     host: ip
     port: 1234
