--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
     <description>GymTrack API</description>
     <properties>
         <java.version>17</java.version>
+        <!-- credentials only for local development so mvn flyway commands work -->
+        <flyway.user>admin</flyway.user>
+        <flyway.password>admin</flyway.password>
+        <flyway.baselineOnMigrate>true</flyway.baselineOnMigrate>
+        <flyway.url>jdbc:postgresql://localhost:5432/postgres</flyway.url>
     </properties>
     <dependencies>
         <dependency>
@@ -85,6 +90,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
     </dependencies>
 
