--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,10 @@ spring:
     type: redis
     redis:
       time-to-live: 60m
+  data:
+    redis:
+      repositories:
+        enabled: false
   redis:
     host: localhost
     port: 6379
