--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -4,7 +4,7 @@ name: GymTrackDB
 services:
   postgres:
     container_name: postgres
-    image: postgres
+    image: postgres:15-alpine
     environment:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
