add new endpoints for user routine exercise entity and fix some fields

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,9 @@ spring:
     url: jdbc:postgresql://localhost:5432/postgres
     username: admin
     password: admin
+  jackson:
+    mapper:
+      accept-case-insensitive-enums: true
   jpa:
     database-platform: org.hibernate.diaclect.PostgreSQLDialect
     properties:
